# WhereIsAI-Lingnan

./: .gitignore  DATA_LEAKAGE_CHECKLIST.md  FINAL_VERSION.md  HF_MODEL_CARD.md  PHASE2_SUBMISSION.md  README.md  RULES_CHECKLIST.md  TECHNICAL_REPORT.md  pyproject.toml  requirements.txt
paper/: main.tex
scripts/: 140_build_phase1_full_provided_text_manifest.sh  141_build_phase1_full_provided_text_features.sh  142_infer_phase1_full_audio_delivery.sh  155_reproduce_final_submission.sh  156_clean_to_final_version.sh  160_build_phase2_full_provided_text_manifest.sh  161_build_phase2_full_provided_text_features.sh  162_infer_phase2_full_audio_delivery.sh
src/humomni/: __init__.py
src/humomni/data/: __init__.py  build_phase1_full_test_manifest.py  build_phase2_full_test_manifest.py
src/humomni/eval/: __init__.py
src/humomni/features/: __init__.py  audio_ssl_extract.py  build_feature_table.py  build_phase1_full_provided_text_features.py  feature_store.py  prosody_extract.py  wavlm_extract.py
src/humomni/infer/: __init__.py  audit_submission.py  final_audio_delivery_features.py  make_submission.py  phase1_full_audio_delivery_system.py  phase2_full_audio_delivery_system.py
src/humomni/models/: __init__.py  audio_delivery_pairwise.py
src/humomni/utils/: hashing.py  io.py  train_guard.py
tests/: test_audio_delivery_pairwise.py  test_phase1_full_provided_text.py  test_phase2_full_provided_text.py  test_submission_format.py  test_train_guard.py  test_wavlm_short_input.py
