[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humomni-track1"
version = "0.1.0"
description = "Reproducible skeleton for HumOmni 2026 Track 1 EmpathyEval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.3",
  "numpy==2.2.6",
  "torch==2.9.0",
]

[project.optional-dependencies]
feature-extraction = [
  "librosa==0.11.0",
  "soundfile==0.13.1",
  "transformers==5.8.1",
  "huggingface_hub==1.14.0",
  "funasr==1.3.1",
  "modelscope==1.36.3",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
